--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,9 +49,11 @@ h1{
 .leftContent{
     float: left;
     width: 20%;
-
-    
+        
 }
+ 
+
+
 .mainContent{
 
     padding: 0px;
@@ -112,3 +114,18 @@ h1{
     background-color: violet;
     
 }
+
+.banner{
+    background-color: tomato;
+    width: 100%;
+    height: 200px;
+    
+}
+
+@media only screen and (max-width: 600px) {
+    .iconPage{
+        width: 50px;
+        height: 50px;
+    }
+    
+  }
