--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,11 +68,21 @@
     
             <h1>24.07.2022</h1>
 
-
          </div>
 
 
-         <!-- FIM LATERAL DIREITA-->
+         <!-- FIM CONTEUDO PRINCIPAL-->
+
+
+         <!-- FAIXA -->
+         <div class="banner">
+
+    
+
+
+         </div>
+         <!-- FIM FAIXA -->
+
 
     </div>
 
