--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,7 +119,8 @@ h1{
     background-color: tomato;
     width: 100%;
     height: 200px;
-    margin-top: 50px;
+    position: absolute;
+    display: block;
     
 }
 
