--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,8 +87,8 @@ h1{
 .iconPosition{
     width: 60px;
     height: 60px;
-    position: relative;
-    bottom: 390px;
+    position: fixed;
+    bottom: 570px;
     left: 25px;
     color: pink;
     cursor: pointer;
@@ -129,5 +129,20 @@ h1{
         width: 50px;
         height: 50px;
     }
+
+    .mainContent{
+
+        padding: 0px;
+        margin: 0 auto;
+        text-align: justify;
+        width: 95%;
+        height: 500px;
+        position: relative;
+        
+    }
+
+
+
+
     
   }
