--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,8 +119,7 @@ h1{
     background-color: tomato;
     width: 100%;
     height: 200px;
-    position: absolute;
-    display: block;
+    position: relative;
     
 }
 
@@ -140,9 +139,6 @@ h1{
         position: relative;
         
     }
-
-
-
 
     
   }
