--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,13 +115,6 @@ h1{
     
 }
 
-.banner{
-    background-color: tomato;
-    width: 100%;
-    height: 200px;
-    position: relative;
-    
-}
 
 
 @media only screen and (max-width: 600px) {
@@ -141,10 +134,20 @@ h1{
         
     }
 
+ 
+  }
+
+  
+@media only screen and (min-width: 1000px) {
+    
     .banner{
-     
+        background-color: tomato;
+        width: 100%;
+        height: 200px;
+        position: relative;
         
     }
-
     
+
+ 
   }
