--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,3 +151,10 @@ h1{
 
  
   }
+
+  .menuOpen{
+      float: left;
+      width: 500px;
+      height: 500px;
+      background-color: yellow;
+  }
