--- a/public/css/site.css
+++ b/public/css/site.css
@@ -31,8 +31,7 @@ h1{
     width: 100%;
     height: 70px;
     text-align: center;
-    padding-top: 25px;
-    float: left;
+    
     
 }
 
@@ -45,7 +44,7 @@ a:hover{
     text-decoration: none;
     color: whitesmoke;
     font-size: 24px;
-       
+   
 }
 
 .leftSide{
@@ -64,7 +63,7 @@ a:hover{
 .logoPosition{
     width: 90px;
     height: 40px;
-    position: fixed;
+    position: relative;
     left: 25px;
     top: 20px;
     color: pink;
@@ -83,4 +82,15 @@ a:hover{
 .imgMain{
     width: 500px;
     height: 500px;
+}
+
+@media only screen and (max-width: 1000px) {
+    
+    .btnBarra{
+        
+        float: left;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+
+ 
 }
