--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,8 +27,10 @@
      <div>
        <a class="btnBarra" href="/index">Home</a>
        <a class="btnBarra" href="/viagem">Viagem</a>
-       <a class="btnBarra" href="">Ajude-nos</a>
-       <a class="btnBarra" href="">Contato</a>
+       <a class="btnBarra" href="/festa">Festa</a>
+       <a class="btnBarra" href="/contribua">Ajude-nos</a>
+       <a class="btnBarra" href="/presentes">Presentes</a>
+       <a class="btnBarra" href="/contato">Contato</a>
      </div>
       <!-- FIM BOTÕES BARRA -->
      
