--- a/views/festa.ejs
+++ b/views/festa.ejs
@@ -2,14 +2,7 @@
 <%- include('./partials/header') %>
 <!-- FIM BARRA COMPARTILHADA -->
 
-<!-- CONTEUDO DA ESQUERDA -->
-<div class="leftSide">
-
-    <img class="imgViagem" src="/icon/paris.png">
-
-</div>
-   <!-- FIM CONTEUDO DA ESQUERDA-->
-
+   
   <!-- CONTEUDO DA DIREITA -->
   <aside class="rightSide">
 
@@ -19,23 +12,9 @@
    <!-- FIM DO CONTEUDO DA DIREITA-->
 
   <!-- CONTEUDO CENTRAL-->
-  <div class="mainViagem">
+  <div>
 
-    <h1>Nossa Viagem</h1>
-
-    <p class="pViagem">
-
-        What is Lorem Ipsum?
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker 
-        including versions of Lorem Ipsum.
-
-    </p>
+    <h1>SPAZIO CASANOSTRA</h1>
 
     <p class="pViagem">
 
@@ -51,9 +30,14 @@
 
     </p>
 
-    <img class="imgViagem" src="/img/paris.jpeg">
 
-    <img class="imgViagem" src="/img/paris.jpeg">
+    <img class="imgViagem" src="/img/mesas.webp">
+
+    <img class="imgViagem" src="/img/decora.webp">
+
+    <img class="imgViagem" src="/img/altar.webp">
+
+    <img class="imgViagem" src="/img/balada.webp">
     
     
   </div>
