--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -14,25 +14,11 @@
   <!-- CONTEUDO CENTRAL-->
   <div>
 
-    <h1>Lista</h1>
-
-    <table class="tabela">
-   
-      <tr>
-        <th>Item</th>
-        <th>Preço</th>
-        <th>Descrição</th>   
-        <th>Foto</th>  
-      </tr>
-      <tr>
-        <td>Carro</td>
-        <td>R$ 1.500.000,00</td>
-        <td>Ferrari</td>
-        <td><img class="gift" src="/img/ferrari2.jpg"></td>
-      </tr> 
-    </table>
-
+    <h1>Contato</h1>
+    <h1>Fernando de Lima Gomes</h1>
+    <h1>Lilian de Siqueira</h1>
     
+   
   </div>
   <!-- FIM CONTEUDO CENTRAL-->
 
