--- a/views/contribua.ejs
+++ b/views/contribua.ejs
@@ -18,15 +18,31 @@
 
     <h1>CHAVE: 428.042.168-45</h1>
 
-    <input type="text">
+    <label>
+      Nome
+    </label>
 
     <br>
 
-    <input type="text">
+    <input class="inputName" type="text">
 
     <br>
 
-    <button>Enviar</button>
+    <label>
+      Digite sua mensagem
+    </label>
+
+    <br>
+
+    <textarea class="inputMsg">
+
+    </textarea>
+
+    <br>
+
+    <button class="inputBtn">Limpar</button>
+
+    <button class="inputBtn">Enviar</button>
     
     
   </div>
