--- a/views/festa.ejs
+++ b/views/festa.ejs
@@ -30,16 +30,20 @@
 
     </p>
 
+    <div class="imgCenterViagem">
 
-    <img class="imgViagem" src="/img/mesas.webp">
+      <img class="imgViagem" src="/img/mesas.webp">
 
-    <img class="imgViagem" src="/img/decora.webp">
+      <img class="imgViagem" src="/img/decora.webp">
 
-    <img class="imgViagem" src="/img/altar.webp">
+      <img class="imgViagem" src="/img/altar.webp">
 
-    <img class="imgViagem" src="/img/balada.webp">
-    
-    
+      <img class="imgViagem" src="/img/balada.webp">
+
+
+    </div>
+   
+        
   </div>
   <!-- FIM CONTEUDO CENTRAL-->
 
