--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
       <h1>Casamento Fernando & Lilian</h1>
 
-      <p> 
+      <p class="pMain"> 
         Escolhemos o dia 24/07/2022 para nos unirmos em matrimônio. 
         Será um momento muito especial que queremos dividir com todos aqueles que nos querem bem. 
         Nossa história começou em 2015, mas nos conhecemos um pouco antes, apesar das diferenças 
@@ -16,6 +16,13 @@
         surpreso é esperado, pedido de namoro e desde então nós não nos desgrudamos mais. 
         
       </p>
+
+      <!-- AUDIO -->
+      <audio controls autoplay="true">
+          <source src="/music/perfect.mp3" type="audio/mpeg">
+          <source src="/music/thousand.mp3" type="audio/mpeg">
+      </audio>
+      <!-- FIM AUDIO -->
     
   
     </div>
