--- a/views/viagem.ejs
+++ b/views/viagem.ejs
@@ -53,7 +53,7 @@
 
     <img class="imgViagem" src="/img/paris.jpeg">
 
-    <img class="imgViagem" src="/img/paris.jpeg">
+    <img class="imgViagem" src="/img/luvre.jpg">
     
     
   </div>
