--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,12 @@
  <!-- HTML -->
 <html lang="en">
    <!-- HEAD -->
-  <head>
+  <head>    
       <link rel="stylesheet" type="text/css" href="/css/site.css">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>Lilian & Fernando</title>
   </head>
    <!-- FIM HEAD-->
    
