--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
 
      <!-- BOTÕES BARRA -->
      <div>
-       <a class="btnBarra" href="/index">Home</a>
+       <a class="btnBarra" href="/">Home</a>
        <a class="btnBarra" href="/viagem">Viagem</a>
        <a class="btnBarra" href="/festa">Festa</a>
        <a class="btnBarra" href="/contribua">Ajude-nos</a>
