--- a/public/css/site.css
+++ b/public/css/site.css
@@ -64,13 +64,16 @@ h1{
 
 a:hover{
     color:violet;
+    
 }
 
 .btnBarra{
-    margin: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
     text-decoration: none;
     color: whitesmoke;
     font-size: 24px;
+  
    
 }
 
