--- a/views/contribua.ejs
+++ b/views/contribua.ejs
@@ -29,6 +29,16 @@
       <input class="inputName" type="text" name="nome">
   
       <br>
+
+      <label>
+        TELEFONE
+      </label>
+  
+      <br>
+  
+      <input class="inputName" type="text" name="telefone">
+  
+      <br>
   
       <label>
         Digite sua mensagem
