--- a/views/contribua.ejs
+++ b/views/contribua.ejs
@@ -18,7 +18,7 @@
 
     <h1>CHAVE: 428.042.168-45</h1>
 
-    <form method="POST" action="/contribua">
+    <form method="POST" action="http://casamentofernandoelilian.com.br/contribua">
 
       <label>
         Nome
