--- a/views/festa.ejs
+++ b/views/festa.ejs
@@ -1,8 +1,9 @@
 <!-- BARRA COMPARTILHADA -->
-<%- include('./partials/header') %>
+<%- include('./partials/header2') %>
 <!-- FIM BARRA COMPARTILHADA -->
 
    
+<body id="fundoFesta">
   <!-- CONTEUDO DA DIREITA -->
   <aside class="rightSide">
 
@@ -12,11 +13,11 @@
    <!-- FIM DO CONTEUDO DA DIREITA-->
 
   <!-- CONTEUDO CENTRAL-->
-  <div>
+  <div class="contentFesta">
 
     <h1>SPAZIO CASANOSTRA</h1>
 
-    <p class="pViagem">
+    <p>
 
         What is Lorem Ipsum?
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -42,6 +43,8 @@
 
 
     </div>
+
+    <h1>Endereço: Rua XXX</h1>
    
         
   </div>
