--- a/views/presentes.ejs
+++ b/views/presentes.ejs
@@ -1,8 +1,8 @@
 <!-- BARRA COMPARTILHADA -->
-<%- include('./partials/header') %>
+<%- include('./partials/header2') %>
 <!-- FIM BARRA COMPARTILHADA -->
 
-   
+<body id="fundoPresentes">   
   <!-- CONTEUDO DA DIREITA -->
   <aside class="rightSide">
 
