--- a/views/viagem.ejs
+++ b/views/viagem.ejs
@@ -1,24 +1,22 @@
 <!-- BARRA COMPARTILHADA -->
-<%- include('./partials/header') %>
+<%- include('./partials/header2') %>
 <!-- FIM BARRA COMPARTILHADA -->
 
-<!-- CONTEUDO DA ESQUERDA -->
-<div class="leftSide">
+ <!-- BODY -->
+ <body id="fundoViagem">
+<div class="container-sm">
+  <div class="row">
+    <div class="col">
+      <!-- CONTEUDO DA ESQUERDA -->
+      <div>
 
-    <img class="imgViagem" src="/icon/paris.png">
+       
 
-</div>
-   <!-- FIM CONTEUDO DA ESQUERDA-->
-
-  <!-- CONTEUDO DA DIREITA -->
-  <aside class="rightSide">
-
-    <img class="iconMsg" src="/icon/msg.png">
-
-  </aside>
-   <!-- FIM DO CONTEUDO DA DIREITA-->
-
-  <!-- CONTEUDO CENTRAL-->
+      </div>
+      <!-- FIM CONTEUDO DA ESQUERDA-->
+    </div>
+    <div class="col">
+      <!-- CONTEUDO CENTRAL-->
   <div class="mainViagem">
 
     <h1>Nossa Viagem</h1>
@@ -30,10 +28,7 @@
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
         when an unknown printer took a galley of type and scrambled it to make a type 
         specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker 
-        including versions of Lorem Ipsum.
+        electronic typesetting, remaining essentially unchanged. 
 
     </p>
 
@@ -43,21 +38,25 @@
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
         when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker 
-        including versions of Lorem Ipsum.
+        specimen book. 
 
     </p>
 
     <img class="imgViagem" src="/img/paris.jpeg">
 
     <img class="imgViagem" src="/img/luvre.jpg">
+
+    <img class="iconMsg" src="/icon/msg.png">
     
     
   </div>
   <!-- FIM CONTEUDO CENTRAL-->
+    </div>
+ 
+    </div>
+ </div>     
+
+  
 
 
 </body>
