--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,134 @@
 <!-- BARRA COMPARTILHADA -->
-<%- include('./partials/header') %>
+<%- include('./partials/header2') %>
 <!-- FIM BARRA COMPARTILHADA -->
 
-    <!-- CONTEUDO DA ESQUERDA -->
-    <div class="leftSide">
+ <!-- BODY -->
+<body id="fundoIndex">
+ <div class="container-sm">
+  <div class="row">
+    <div class="col">
 
-      <h1>Casamento Fernando & Lilian</h1>
+      <!-- TEXTO-->
+      <div class="initiGeneral">
 
-      <p class="pMain"> 
-        Escolhemos o dia 24/07/2022 para nos unirmos em matrimônio. 
-        Será um momento muito especial que queremos dividir com todos aqueles que nos querem bem. 
-        Nossa história começou em 2015, mas nos conhecemos um pouco antes, apesar das diferenças 
-        que havia entre nós na época isso não foi impedimento para nos apaixonarmos. Éramos dois 
-        jovens tímidos em uma noite no cinema no dia 21/04/2015 e no dia 16/05/2015 veio o tão 
-        surpreso é esperado, pedido de namoro e desde então nós não nos desgrudamos mais. 
-        
-      </p>
-
-      <!-- AUDIO -->
-      <audio controls autoplay="true">
-          <source src="/music/perfect.mp3" type="audio/mpeg">
-          <source src="/music/thousand.mp3" type="audio/mpeg">
-      </audio>
-      <!-- FIM AUDIO -->
-    
+          <h1 class="titulo">Lilian & Fernando</h1>
   
-    </div>
-     <!-- FIM CONTEUDO DA ESQUERDA-->
+          <p class="texto"> 
+          Escolhemos o dia 24/07/2022 para nos unirmos em matrimônio. 
+          Será um momento muito especial que queremos dividir com todos aqueles que nos querem bem. 
+          Nossa história começou em 2015, mas nos conhecemos um pouco antes, apesar das diferenças 
+          que havia entre nós na época isso não foi impedimento para nos apaixonarmos. Éramos dois 
+          jovens tímidos em uma noite no cinema no dia 21/04/2015 e no dia 16/05/2015 veio o tão 
+          surpreso é esperado, pedido de namoro e desde então nós não nos desgrudamos mais. 
+          
+          </p>
 
-    <!-- CONTEUDO DA DIREITA -->
-    <aside class="rightSide">
+          <!-- FIM TEXTO -->
 
-      <img class="iconMsg" src="/icon/msg.png">
-
-    </aside>
-     <!-- FIM DO CONTEUDO DA DIREITA-->
-
-    <!-- CONTEUDO CENTRAL-->
-    <div>
-
-      <img class="imgMain" src="/img/play.png">
-
-      <h1>24 / 07 / 2022</h1>
+  
+          <!-- AUDIO -->
+          <div class="audio">
+            <audio class="audio" controls autoplay="true">
+              <source src="/music/thousand.mp3" type="audio/mpeg">
+            </audio>
+          </div>
+          
+          <!-- FIM AUDIO -->
       
+      
+      </div>
+      
+
     </div>
-    <!-- FIM CONTEUDO CENTRAL-->
+
+    <!-- FIM CONTEUDO DA ESQUERDA-->
+
+    <div class="col">
+       <!-- CONTEUDO CENTRAL-->
+      <div class="imgData">
+
+        <!-- CARROSSEL -->
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/img/play.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>  </h5>
+                  <p></p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/img/copa.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5> </h5>
+                  <p></p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/img/dinner.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>  </h5>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- FIM CARROSSEL -->
+
+          <div>
+            <h1>
+              24/07/2022  
+            </h1>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+
+    </div>
+    <div class="col">
+ 
+    </div>
+    <div class="col">
+      <!-- CONTEUDO DA DIREITA -->
+      <aside class="rightSide">
+
+          <img class="iconMsg" src="/icon/msg.png">
+  
+      </aside>
+      <!-- FIM DO CONTEUDO DA DIREITA-->
+    </div>
+  </div>
+</div>
 
 
-  </body>
-   <!-- FIM DO BODY -->
+
+<!-- FIM CONTEUDO CENTRAL-->
+
+<!-- BOOTSTRAP -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+<!-- BOOTSTRAP -->
+
+</body>
+<!-- FIM DO BODY -->
 
 </html>
- <!-- FIM HTML -->
+<!-- FIM HTML -->
