--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -1,17 +1,140 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 #fundoIndex{
     background-image: url(/img/dedo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+li{
+    color: red;
+    display: inline;
+    margin: 30px;
+    
+}
+
 .barra{
-    background-color: rgba(190, 152, 189, 0.5);
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 70px;
+    text-align: center;
 }
 
 .menu{
 
+    width: 100%;
+    height: 50px;
+    background-color: #222;
+    font-family: 'Arial';
+
+}
+
+.menu ul{
+    list-style: none;
+    position: relative;
+}
+
+.menu ul li{
+    width: 150px;
+    float: left;
+}
+
+.menu a{
+    padding: 15px;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    background-color: #222;
+    color: #fff;
+}
+
+.menu ul li:hover ul{
+    visibility: visible;
+}
+
+.menu a:hover{
+    background-color: #f4f4f4;
+    color: #555;
+}
+
+label[for="bt_menu"]{
+    padding: 5px;
+    background-color: #222;
+    color: #fff;
+    font-family: "Arial";
+    text-align: center;
+    font-size: 30px;
+    cursor: pointer;
+    width: 50px;
+}
+
+
+#bt_menu{
+    display: none;
+}
+
+label[for="bt_menu"]{
+    display: none;
+}
+
+@media(max-width: 800px){
+
+
+    label[for="bt_menu"]{
+        display: block;
+    }
+
+    #bt_menu:checked ~ .menu{
+        margin-left: 0;
+    }
+
+    .menu{
+        margin-top: 5px;
+        margin-left: -100%;
+        transition: all .4s;
+    }
+
+    .menu ul li{
+        width: 100%;
+        float: none;
+    }
+
+}
+
+
+.logoPosition{
+    width: 90px;
+    height: 40px;
+    position: relative;
+    left: 25px;
+    top: 20px;
+    color: pink;
+  
 }
 
 .btnBarra{
-    
+
+    margin-left: 40px;
+    margin-right: 40px;
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 24px;
+
+}
+
+.iconMsg{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    position: fixed;
+    bottom: 25px;
+    right: 35px;
+}
+
+.carousel-item{
+    width: 400px;
+    height: 400px;
 }
