--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -1,25 +1,31 @@
+/* GLOBAL */
+
 *{
     margin: 0;
     padding: 0;
 }
 
-#fundoIndex{
-    background-image: url(/img/dedo.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+li{
+    display: inline;
+    margin: 25px;
 }
 
-li{
-    color: red;
-    display: inline;
-    margin: 30px;
-    
+/* FIM GLOBAL */
+
+/* GERAL */
+
+.logoPosition{
+    width: 95px;
+    height: 40px;
+    float: left;
+    color: pink;
+  
 }
 
 .barra{
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
-    height: 70px;
+    height: 100px;
     text-align: center;
 }
 
@@ -80,6 +86,28 @@ label[for="bt_menu"]{
     display: none;
 }
 
+
+.btnBarra{
+
+    margin-left: 40px;
+    margin-right: 40px;
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 24px;
+
+}
+
+.iconMsg{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    position: fixed;
+    bottom: 25px;
+    right: 35px;
+}
+
+
+/* RESPONSIVIDADE */
 @media(max-width: 800px){
 
 
@@ -104,37 +132,22 @@ label[for="bt_menu"]{
 
 }
 
+/* FIM DA RESPONSIVIDADE */
 
-.logoPosition{
-    width: 90px;
-    height: 40px;
-    position: relative;
-    left: 25px;
-    top: 20px;
-    color: pink;
-  
-}
 
-.btnBarra{
+/* FIM GERAL */
 
-    margin-left: 40px;
-    margin-right: 40px;
-    text-decoration: none;
-    color: whitesmoke;
-    font-size: 24px;
 
-}
-
-.iconMsg{
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    position: fixed;
-    bottom: 25px;
-    right: 35px;
+/* INDEX */
+#fundoIndex{
+    background-image: url(/img/dedo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .carousel-item{
     width: 400px;
     height: 400px;
 }
+/* FIM INDEX */
+
