--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       <!-- TEXTO-->
       <div class="initiGeneral">
 
-          <h1 class="titulo">Lilian & Fernando</h1>
+          <h1 class="titulo">Fernando & Lilian</h1>
   
           <p class="texto"> 
           Escolhemos o dia 24/07/2022 para nos unirmos em matrimônio. 
