--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -7,7 +7,12 @@
 
 li{
     display: inline;
-    margin: 25px;
+    margin: 02px;
+}
+
+h1{
+    text-align: center;
+    color: palevioletred;
 }
 
 /* FIM GLOBAL */
@@ -15,28 +20,47 @@ li{
 /* GERAL */
 
 .logoPosition{
-    width: 95px;
-    height: 40px;
+    width: 97px;
+    height: 50px;
     float: left;
     color: pink;
-  
+    text-align: center;
+    margin-top: 15px;
+    margin-right: 40px;
+      
 }
 
 .barra{
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.2);
     width: 100%;
-    height: 100px;
-    text-align: center;
+    height: 80px; 
+    float: left;
+    
 }
 
 .menu{
 
     width: 100%;
     height: 50px;
-    background-color: #222;
     font-family: 'Arial';
+  
 
 }
+
+.btnBarra{
+
+    padding: 10px;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    background-color:#4682B4;
+    color: #fff;
+    width: 100px;
+    margin-left: 15px;
+    border-radius: 10px;
+ 
+}
+
 
 .menu ul{
     list-style: none;
@@ -44,18 +68,10 @@ li{
 }
 
 .menu ul li{
-    width: 150px;
+    width: 180px;
     float: left;
 }
 
-.menu a{
-    padding: 15px;
-    display: block;
-    text-decoration: none;
-    text-align: center;
-    background-color: #222;
-    color: #fff;
-}
 
 .menu ul li:hover ul{
     visibility: visible;
@@ -68,7 +84,7 @@ li{
 
 label[for="bt_menu"]{
     padding: 5px;
-    background-color: #222;
+    background-color: blue;
     color: #fff;
     font-family: "Arial";
     text-align: center;
@@ -86,17 +102,6 @@ label[for="bt_menu"]{
     display: none;
 }
 
-
-.btnBarra{
-
-    margin-left: 40px;
-    margin-right: 40px;
-    text-decoration: none;
-    color: whitesmoke;
-    font-size: 24px;
-
-}
-
 .iconMsg{
     width: 50px;
     height: 50px;
@@ -108,7 +113,7 @@ label[for="bt_menu"]{
 
 
 /* RESPONSIVIDADE */
-@media(max-width: 800px){
+@media(max-width: 1024px){
 
 
     label[for="bt_menu"]{
@@ -130,6 +135,16 @@ label[for="bt_menu"]{
         float: none;
     }
 
+    .logoPosition{
+        width: 97px;
+        height: 50px;
+        float: right;
+        color: pink;
+        text-align: center;
+        margin-top: 15px;
+      
+    }
+
 }
 
 /* FIM DA RESPONSIVIDADE */
@@ -140,14 +155,40 @@ label[for="bt_menu"]{
 
 /* INDEX */
 #fundoIndex{
-    background-image: url(/img/dedo.jpg);
+    background-image: url(/img/heart4.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 .carousel-item{
+    margin: 15px;
     width: 400px;
     height: 400px;
+
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    background-color: #ddd;
 }
+
+.initiGeneral{
+    margin: 15px;
+    float: left;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    text-align: justify;
+    padding: 10px;
+}
+
+.titulo{
+    color: pink;
+}
+
+.audio{
+    margin-top: 40px;
+    text-align: center;
+}
+
 /* FIM INDEX */
 
