--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -18,15 +18,16 @@
     <!-- BARRA PRINCIPAL -->
    <div class="barra">
 
-      <!-- LOGO -->
-     <div>
-       <h1 class="logoPosition">L & F</h1>
-     </div>
-      <!-- FIM LOGO-->
+    <!-- LOGO -->
+    <div>
+      <h1 class="logoPosition">F & L</h1>
+    </div>
+    <!-- FIM LOGO-->
 
-     <!-- BOTÕES BARRA -->    
+     <!-- MENU ICONE -->    
      <input type="checkbox" id="bt_menu">
      <label for="bt_menu">&#9776;</label>
+     <!-- FIM MENU ICONE --> 
      
      <nav class="menu">
          <ul>
