--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -12,7 +12,7 @@ li{
 
 h1{
     text-align: center;
-    color: palevioletred;
+    color: pink;
 }
 
 /* FIM GLOBAL */
@@ -53,7 +53,7 @@ h1{
     display: block;
     text-decoration: none;
     text-align: center;
-    background-color:#4682B4;
+    background-color: #4682B4;
     color: #fff;
     width: 100px;
     margin-left: 15px;
@@ -83,14 +83,18 @@ h1{
 }
 
 label[for="bt_menu"]{
-    padding: 5px;
-    background-color: blue;
+    padding: 20px;
+    background-color: #B0E0E6;
     color: #fff;
     font-family: "Arial";
     text-align: center;
     font-size: 30px;
     cursor: pointer;
-    width: 50px;
+    height: 79px;
+    width: 70px;
+    font-weight: bold;
+    font-size: 30px;
+    margin: 1px;
 }
 
 
@@ -113,7 +117,7 @@ label[for="bt_menu"]{
 
 
 /* RESPONSIVIDADE */
-@media(max-width: 1024px){
+@media(max-width: 1280px){
 
 
     label[for="bt_menu"]{
@@ -145,6 +149,20 @@ label[for="bt_menu"]{
       
     }
 
+    .btnBarra{
+
+        padding: 10px;
+        display: block;
+        text-decoration: none;
+        text-align: center;
+        background-color: #4682B4;
+        color: #fff;
+        width: 200px;
+        margin-left: 15px;
+        border-radius: 10px;
+     
+    }
+
 }
 
 /* FIM DA RESPONSIVIDADE */
@@ -162,14 +180,12 @@ label[for="bt_menu"]{
 }
 
 .carousel-item{
-    margin: 15px;
+    margin: 5px;
     width: 400px;
     height: 400px;
 
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    background-color: #ddd;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .initiGeneral{
@@ -192,3 +208,38 @@ label[for="bt_menu"]{
 
 /* FIM INDEX */
 
+/* VIAGEM */
+#fundoViagem{
+    background-image: url(/img/paris3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+.imgViagem{
+
+    width: 300px;
+    height: 200px; 
+    margin: 10px;
+
+}
+
+.mainViagem{
+    text-align: center;
+    margin: 15px;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 700px;
+
+}
+
+.pViagem{
+
+    color: #E6E6E6;
+    border: black;
+    text-shadow: black;
+    text-align: justify;
+    margin: 0 auto;
+    width: 550px;
+    padding: 5px;
+
+}
