--- a/views/padrinhos.ejs
+++ b/views/padrinhos.ejs
@@ -10,7 +10,7 @@
       <div class="col">
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/sandro.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nome</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -18,7 +18,7 @@
         </div>
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/felipe-lilian.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nome</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -26,7 +26,7 @@
         </div>
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/felipe.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nome</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -51,7 +51,7 @@
       <div class="col">
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/nanda.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Nome</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
