--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -58,6 +58,8 @@ h1{
     width: 100px;
     margin-left: 15px;
     border-radius: 10px;
+    z-index:1;
+    position: relative;
  
 }
 
@@ -155,7 +157,7 @@ label[for="bt_menu"]{
         display: block;
         text-decoration: none;
         text-align: center;
-        background-color: #4682B4;
+        background-color: #B0E0E6;
         color: #fff;
         width: 200px;
         margin-left: 15px;
