--- a/views/padrinhos.ejs
+++ b/views/padrinhos.ejs
@@ -12,7 +12,7 @@
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/sandro.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Sandro</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
@@ -20,7 +20,7 @@
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/felipe-lilian.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Felipe</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
@@ -28,15 +28,51 @@
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/felipe.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Felipe</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/kaique.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Kaique</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+        <!---->
+        <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Marks</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+         <!---->
+         <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Antoni</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+         <!---->
+         <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Marido</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+        <!---->
+        <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Marido</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
@@ -53,7 +89,15 @@
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/nanda.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Fernanda</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+        <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/kamila.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Kamila</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
@@ -61,7 +105,7 @@
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Patricia</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
@@ -69,15 +113,43 @@
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Cintia</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
         <!---->
+        <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Nome</h5>
+            <h5 class="card-title">Eduarda</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+        <!---->
+        <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ana</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+        <!---->
+        <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Marisa</h5>
+            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <!---->
+        <!---->
+        <div class="card" style="width: 18rem;" id="felipe">
+          <img src="/img/ruth.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Ruth</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
