--- a/views/padrinhos.ejs
+++ b/views/padrinhos.ejs
@@ -138,7 +138,7 @@
         <!---->
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/marisa.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Marisa</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
