--- a/views/padrinhos.ejs
+++ b/views/padrinhos.ejs
@@ -43,7 +43,7 @@
         <!---->
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/marks.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Marks</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -52,27 +52,27 @@
         <!---->
          <!---->
          <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/antoni.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Antoni</h5>
+            <h5 class="card-title">Anthony</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
         <!---->
          <!---->
          <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/marisamarido.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Marido</h5>
+            <h5 class="card-title">Altair</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
         <!---->
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/ruthmarido.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Marido</h5>
+            <h5 class="card-title">Luiz</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
@@ -103,7 +103,7 @@
         </div>
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/patricia.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Patricia</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -111,7 +111,7 @@
         </div>
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/cintia.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Cintia</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -120,7 +120,7 @@
         <!---->
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/eduarda.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Eduarda</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
@@ -129,7 +129,7 @@
         <!---->
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
-          <img src="/img/padrinho.jpg" class="card-img-top" alt="...">
+          <img src="/img/ana.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Ana</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
